# pluginAICQ

./: .gitignore  README.md
.github/workflows/: release.yml
hermes-plugin/: README.md  pyproject.toml
hermes-plugin/aicq_hermes/: adapter.py  chat.py  identity.py  register.py  server_client.py
openclaw-plugin/: .gitignore  README.md  SKILL.md  __init__.py  cli.cjs  cli.js  config.py  db.py  extension.js  gateway.py  handshake_manager.py  identity_service.py  index.js  index.mjs  openclaw.plugin.json  package-lock.json  package.json  plugin.py  postinstall.cjs  postinstall.js  pyproject.toml  requirements.txt  server_client.py  setup-entry.js  setup-entry.mjs  types.py
openclaw-plugin/channels/: encrypted_chat.py
openclaw-plugin/file_transfer/: transfer_manager.py
openclaw-plugin/hooks/: before_tool_call.py  message_sending.py
openclaw-plugin/lib/: chat.js  server-client.js
openclaw-plugin/p2p/: connection_manager.py
openclaw-plugin/public/: index.html
openclaw-plugin/services/: auto_update_service.py
openclaw-plugin/src/: channel.js  channel.mjs  gateway-handlers.mjs  ui-routes.js
openclaw-plugin/tools/: chat_export_key.py  chat_friend.py  chat_send.py
openclaw-plugin/ui/: management_server.py
plugin-js/: extension.js  package-lock.json
plugin-js/lib/: chat.js  crypto.js  file-transfer.js  server-client.js
