[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicq-plugin"
version = "2.1.0"
description = "End-to-end encrypted chat plugin for OpenClaw agents — Python/aiohttp implementation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AICQ Team", email = "dev@aicq.online"},
]
keywords = ["aicq", "openclaw", "encrypted-chat", "e2ee", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "aiohttp>=3.9.0",
    "pynacl>=1.5.0",
    "aiosqlite>=0.19.0",
    "qrcode>=7.4",
    "Pillow>=10.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
aicq-plugin = "plugin:main"

[project.urls]
Homepage = "https://aicq.online"
Repository = "https://github.com/ctz168/pluginAICQ"
Documentation = "https://aicq.online/docs"
Bug Tracker = "https://github.com/ctz168/pluginAICQ/issues"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["openclaw.plugin.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
